--- a/etc/e11-cli/lambda-home/static/index.html
+++ b/etc/e11-cli/lambda-home/static/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <p>This is the home page.</p>
+    <p>{{status}}</p>
     <p>Welcome to CSCI E-11. You can log in with your <a href='{{key}}'>[HARVARD KEY]</a>.</p>
   </body>
 </html>
