--- a/etc/e11-cli/lambda-home/src/home_app/static/infobox-test-variant.html
+++ b/etc/e11-cli/lambda-home/src/home_app/static/infobox-test-variant.html
@@ -13,10 +13,10 @@
   </style>
 </head>
 <body>
-  <!-- Attribute-title variant -->
-  <div class="infobox infobox-floating" data-title="This session">
+  <div class="infobox infobox-floating">
     <button class="infobox-close" onclick="this.parentElement.style.display='none'">&times;</button>
-    <p>Floating box content. Stays fixed top-right. Close hides it.</p>
+    <span class="infobox-title">This session</span>
+    <p>Same behavior, different title technique.</p>
   </div>
   <div class="demo-block"></div>
 </body>
