--- a/etc/e11-cli/lambda-home/src/home_app/static/infobox-test.html
+++ b/etc/e11-cli/lambda-home/src/home_app/static/infobox-test.html
@@ -17,6 +17,16 @@
   <div class="infobox infobox-floating" data-title="This session">
     <button class="infobox-close" onclick="this.parentElement.style.display='none'">&times;</button>
     <p>Floating box content. Stays fixed top-right. Close hides it.</p>
+    <pre>
+This is some pretty pre stuff 1.
+This is some pretty pre stuff 2
+This is some pretty pre stuff 3.
+This is some pretty pre stuff 4.
+This is some pretty pre stuff 5.
+This is some pretty pre stuff 6.
+This is some pretty pre stuff 7.
+This is some pretty pre stuff 8. This is some pretty pre stuff 9.
+
   </div>
   <div class="demo-block"></div>
 </body>
