--- a/lab2/confidential.html
+++ b/lab2/confidential.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is the CSCI E-11 Confidential File</title>
+<title>This is the CSCI E-11 Confidential File (lab2)</title>
 <style>
 html { color-scheme: light dark; }
 body { width: 35em; margin: 0 auto;
@@ -9,7 +9,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>Welcome to the confidential.</h1>
+<h1>Welcome to the confidential (lab2).</h1>
 <p>Ideally, this file is password protected.</p>
 </body>
 </html>
