--- a/lab2/public.html
+++ b/lab2/public.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is the CSCI E-11 Public File</title>
+<title>This is the CSCI E-11 Public File (lab2)</title>
 <style>
 html { color-scheme: light dark; }
 body { width: 35em; margin: 0 auto;
@@ -9,7 +9,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>Welcome to the public.</h1>
+<h1>Welcome to the public (lab2)</h1>
 <p>Anyone on the Internet can view this file. </p>
 </body>
 </html>
