fixed lab2 lint error

--- a/lab2/public.html
+++ b/lab2/public.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>This is the CSCI E-11 Public File (lab2)</title>
-<style>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="keywords" content="public"/>
+    <meta name="description" content="Public file for CSCI E-11 student webserver"/>
+    <title>This is the CSCI E-11 Public File (lab2)</title>
+    <style>
 html { color-scheme: light dark; }
 body { width: 35em; margin: 0 auto;
 font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Welcome to the public (lab2)</h1>
-<p>Anyone on the Internet can view this file. </p>
-</body>
+    </style>
+  </head>
+  <body>
+    <h1>Welcome to the public (lab2)</h1>
+    <p>Anyone on the Internet can view this file. </p>
+  </body>
 </html>
