--- a/lab2/confidential.html
+++ b/lab2/confidential.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>This is the CSCI E-11 Confidential File (lab2)</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Welcome to the confidential (lab2).</h1>
-<p>Ideally, this file is password protected.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="keywords" content="confidential"/>
+    <meta name="description" content="Confidential file for CSCI E-11 student webserver"/>
+    <title>This is the CSCI E-11 Confidential File (lab2)</title>
+    <style>
+     html { color-scheme: light dark; }
+     body { width: 35em; margin: 0 auto;
+       font-family: Tahoma, Verdana, Arial, sans-serif; }
+    </style>
+  </head>
+  <body>
+    <h1>Welcome to the confidential (lab2).</h1>
+    <p>Ideally, this file is password protected.</p>
+  </body>
 </html>
