--- a/lab8/www/index.html
+++ b/lab8/www/index.html
@@ -1,70 +1,67 @@
-{% extends "base.html" %}
+<!DOCTYPE html><!-- -*- mode: html -*- -->
+<html lang="en">
+  <head>
+    <title> lab8 camera </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="google"   content="notranslate"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-{% block content %}
-<!-- index start -->
-<!-- container for the pop-up -->
-<div id="image-popup"
-     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
-         background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:1000;">
-    <img id="popup-img" src="" alt="Full-Size Image" style="max-width:90%; max-height:90%; border:5px solid white;">
-</div>
+    <!-- use Pure.css - https://purecss.io/ -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+          integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css" />
 
-<!-- body -->
-<h1> {% block title %} Message Board{% endblock %} </h1>
+    <!-- bring in JQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script>
 
+    <!-- The `integrity` and `crossorigin` attributes are used for Subresource Integrity (SRI) checking.
+       -- This allows browsers to ensure that resources hosted on third-party servers have not been tampered with.
+       -- Use of SRI is recommended as a best-practice, whenever libraries are loaded from a third-party source.
+       -- Sadly, not all of them do...
+       -- Read more at srihash.org
+       -->
 
-<!-- Show the uploaded images here -->
-<div id='upload-preview'>
-  <div id='message-container'>
-    <div id='message-table'>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+    <div class='content'>
+      <h1> Lab 8 JavaScript Camera </h1>
+
+      <p>This form is for testing the Camera. Enter the API_KEY and the API_SECRET_KEY</p>
+      <form class='pure-form pure-form-aligned'
+            action="api/post-message" method="POST" onsubmit="show_messages(); return true;" target="hidden-iframe">
+        <fieldset>
+          <div class='pure-control-group'>
+            <label for='api-key'>API_KEY:</label>
+            <input type='text' id='api-key' name='api_key' class='uploadf' />
+            <span class="pure-form-message-inline">required</span>
+          </div>
+          <div class='pure-control-group'>
+            <label for='api-secret-key'>API_SECRET_KEY:</label>
+            <input type='text' id='api-secret-key' name='api_secret_key' class='uploadf'/>
+            <span class="pure-form-message-inline">required</span>
+          </div>
+          <div class='pure-control-group'>
+            <label for='api-secret-key'>API Endpoint:</label>
+            <input type='text' id='api-secret-key' name='api_endpoint' class='uploadf'/>
+            <span class="pure-form-message-inline">required</span>
+          </div>
+          <div class='pure-control-group' id='submit-group'>
+            <label for='run-button'>Click to start camera:</label>
+            <input id='run-button' type='button' value='start' class='uploadf' />
+          </div>
+        </fieldset>
+      </form>
+      <div id='status-message'></div>
     </div>
-  </div>
-</div>
-
-<h1>Upload a new message</h1>
-<div id='message-form'>
-
-  <p>This form is for testing the upload API. Enter the API_KEY and the API_SECRET_KEY and a message.</p>
-  <!-- Note: we have the output of the form submission go to the hidden i-frame to avoid form submission with JavaScript -->
-  <form class='pure-form pure-form-aligned' action="api/post-message" method="POST" onsubmit="show_messages(); return true;" target="hidden-iframe">
-    <fieldset>
-      <div class='pure-control-group'>
-        <label for='api-key'>API_KEY:</label>
-        <input type='text' id='api-key' name='api_key' class='uploadf' />
-        <span class="pure-form-message-inline">required</span>
+    <script src="static/camera.js"> </script>
+    <div class='footer'>
+      <div class='pure-u-1 u-sm-1-2'>
+        <p id="copyright" class="legal-license"><a href='tos'>Copyright © 2025 Simson L. Garfinkel</a></p>
       </div>
-      <div class='pure-control-group'>
-        <label for='api-secret-key'>API_SECRET_KEY:</label>
-        <input type='text' id='api-secret-key' name='api_secret_key' class='uploadf'/>
-        <span class="pure-form-message-inline">required</span>
-      </div>
-      <div class='pure-control-group'>
-        <label for='message'>MESSAGE:</label>
-        <input type='text' id='message' name='message' class='uploadf'/>
-        <span class="pure-form-message-inline">required</span>
-      </div>
-      <div class='pure-control-group' id='submit-group'>
-        <label for='submit-button'>Click to post:</label>
-        <input id='submit-button' type='submit' value='POST' class='uploadf' />
-      </div>
-    </fieldset>
-  </form>
-  <iframe name="hidden-iframe" style="display: none;"></iframe>
-  <div id='status-message'></div>
-</div>
-
-
-<!-- If we are in lab5, lab6 or lab8, bring in the image interaction -->
-{% if lab_number >= "5" %}
-<div id='lab5'></div>
-<script src="static/lab5_imageboard.js"></script>
-{% endif %}
-
-
-<!-- bring in the messageboard -->
-
-<script src="static/messageboard.js"> </script>
-<script src="static/startup.js"></script>
-
-{% endblock %}
-<!-- index end -->
+    </div>
+  </body>
+</html>
