--- a/etc/e11-cli/lambda-home/src/home_app/static/infobox-test-variant.html
+++ b/etc/e11-cli/lambda-home/src/home_app/static/infobox-test-variant.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="infobox infobox-floating">
-    <button class="infobox-close" onclick="this.parentElement.style.display='none'">&times;</button>
+    <button class="infobox-close" onclick="this.parentElement.style.display='none'">×</button>
     <span class="infobox-title">This session</span>
     <p>Same behavior, different title technique.</p>
   </div>
