--- a/etc/e11-cli/lambda-home/src/home_app/static/infobox-test.html
+++ b/etc/e11-cli/lambda-home/src/home_app/static/infobox-test.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Attribute-title variant -->
   <div class="infobox infobox-floating" data-title="This session">
-    <button class="infobox-close" onclick="this.parentElement.style.display='none'">&times;</button>
+    <button class="infobox-close" onclick="this.parentElement.style.display='none'">×</button>
     <p>Floating box content. Stays fixed top-right. Close hides it.</p>
     <pre>
 This is some pretty pre stuff 1.
